fix: Add styling for social provider icons in dark mode

--- a/themes/guardrail-theme/login/resources/css/login.css
+++ b/themes/guardrail-theme/login/resources/css/login.css
@@ -681,6 +681,21 @@ span.pf-v5-c-form-control input[aria-invalid="true"] {
 }
 
 
+#kc-social-providers svg:not(.google) {
+    filter: invert(47%) sepia(88%) saturate(7486%) hue-rotate(199deg) brightness(91%) contrast(101%);
+}
+
+#kc-social-providers svg {
+    height: var(--pf-v5-global--FontSize--xl);
+}
+
+@media (prefers-color-scheme: dark) {
+    #kc-social-providers svg:not(.google) {
+        filter: invert(54%) sepia(96%) saturate(2028%) hue-rotate(174deg) brightness(99%) contrast(97%);
+    }
+}
+
+
 /*.pf-v5-c-login__main:not(:has(#kc-info)):not(:has(#kc-registration-container))::after {*/
 /*    content: "Don't have an account? Get Started Now";*/
 /*    !* background: url("https://generation-sessions.s3.amazonaws.com/992bca50d1a1be566686effdf99311ae/img/group-47.png") no-repeat center center; *!*/
